correct catalog.py and some ipynb

--- a/data-collection/load-dataframe-via-trino/load-dataframe-via-trino.ipynb
+++ b/data-collection/load-dataframe-via-trino/load-dataframe-via-trino.ipynb
@@ -35,7 +35,7 @@
     "def Load_Dataframe_via_Trino(\n",
     "    query: str,\n",
     "    dataframe_file: OutputPath(str),\n",
-    "    columns: List[str],\n",
+    "    columns: List[str] = None,\n",
     "    columns_query: str = None,\n",
     "    host: str = \"trino.trino\",\n",
     "    port: int = 8080,\n",
