--- a/monitoring/create-data-quality-report-with-evidently/create-data-quality-report-with-evidently.ipynb
+++ b/monitoring/create-data-quality-report-with-evidently/create-data-quality-report-with-evidently.ipynb
@@ -21,7 +21,8 @@
     "\n",
     "%load_ext lab_black\n",
     "\n",
-    "BASE_IMAGE = \"quay.io/ibm/kubeflow-notebook-image-ppc64le:latest\"\n",
+    "# BASE_IMAGE = \"quay.io/ibm/kubeflow-notebook-image-ppc64le:latest\"\n",
+    "BASE_IMAGE = \"quay.io/ibm/kubeflow-notebook-image-ppc64le:elyra3.15.0-py3.9-tf2.12.0-pt2.0.1-v2\"\n",
     "\n",
     "\n",
     "def Create_Data_Quality_Report_with_Evidently(\n",
